# wave-recorder

./: .gitignore  Cargo.toml  readme.md
core_lib/: Cargo.toml
core_lib/src/: codec.rs  lib.rs  main.rs
core_lib/tests/: test.rs  test_translate.rs
wave_recorder/: Cargo.toml  record_tmp
wave_recorder/android_gradle_app/: gradle.properties  local.properties  settings.gradle
wave_recorder/android_gradle_app/app/: build.gradle
wave_recorder/android_gradle_app/app/src/main/: AndroidManifest.xml
wave_recorder/android_gradle_app/app/src/main/java/org/my_audio_codec/: MainActivity.java
wave_recorder/android_gradle_app/gradle/wrapper/: gradle-wrapper.properties
wave_recorder/src/: audio_play.rs  lib.rs  main.rs
