[package]
name = "core_lib"
version = "0.1.0"
edition = "2024"
[lib]
name = "my_audio_codec"
path = "src/lib.rs"
[[bin]]
name = "my-audio-codec"
path = "src/main.rs"
[dependencies]
tracing = "0.1.44"
tracing-subscriber = {version = "0.3.22",features = ["local-time"]}
hound = "3.5.1"
rustdct = "0.7.1"
# rerun = "0.28.1"
bitstream-io = "4.9.0"
anyhow = "1.0.102"
rand = "0.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.49.0", features = ["full"] }
md-5 = "0.10.6"
reqwest = {version="0.13.2",features=["form"]}
time = {version="0.3.47",features=["local-offset"]}